--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <h3>Top Heroes</h3>
+
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes"
       class="col-1-4"
@@ -8,3 +9,5 @@
     </div>
   </a>
 </div>
+<app-hero-search></app-hero-search>
+
